Add a header for common eBPF CA helper( function)s

--- a/bpf/Makefile
+++ b/bpf/Makefile
@@ -6,6 +6,7 @@ VMLINUX ?= /sys/kernel/btf/vmlinux
 HAVE_WRITABLE_SK_PACING ?= 0
 
 BPF_OBJS := rtt_powertcp.bpf.o
+BPF_DEPS := $(BPF_OBJS:.o=.d)
 INCLUDE_DIR := .include
 
 # Copied from Linux' tools/scripts/Makefile.arch:
@@ -17,8 +18,8 @@ ARCH := $(shell uname -m | sed -e s/i.86/x86/ -e s/x86_64/x86/ \
     -e s/sh[234].*/sh/ -e s/aarch64.*/arm64/ \
     -e s/riscv.*/riscv/)
 
-CFLAGS += -g -target bpf -D__TARGET_ARCH_$(ARCH) \
-		  $(shell pkg-config --cflags libbpf) -I$(INCLUDE_DIR) -c -O2 \
+CFLAGS += -g -target bpf -MD -D__TARGET_ARCH_$(ARCH) \
+		  $(shell pkg-config --cflags libbpf) -I. -I$(INCLUDE_DIR) -c -O2 \
 		  -mcpu=probe -Wall -DHAVE_WRITABLE_SK_PACING=$(HAVE_WRITABLE_SK_PACING)
 
 .PHONY: all
@@ -26,7 +27,7 @@ all: $(BPF_OBJS)
 
 .PHONY: clean
 clean:
-	$(RM) -r -- $(INCLUDE_DIR) $(BPF_OBJS)
+	$(RM) -r -- $(INCLUDE_DIR) $(BPF_DEPS) $(BPF_OBJS)
 
 $(INCLUDE_DIR):
 	mkdir $(INCLUDE_DIR)
@@ -37,3 +38,5 @@ $(INCLUDE_DIR)/vmlinux.h: Makefile | $(INCLUDE_DIR)
 %.bpf.o: %.bpf.c Makefile $(INCLUDE_DIR)/vmlinux.h
 	$(CLANG) $(CFLAGS) $< -o $@
 	$(LLVM_STRIP) -g $@
+
+-include $(BPF_DEPS)
