Add a loader tool for the eBPF implementation
Needed to share a map with TCP-INT. Will be used to configure algorithm
parameters in the future.

--- a/bpf/Makefile
+++ b/bpf/Makefile
@@ -8,6 +8,10 @@ HAVE_WRITABLE_SK_PACING ?= 0
 
 BPF_OBJS := powertcp.bpf.o rtt_powertcp.bpf.o
 BPF_DEPS := $(BPF_OBJS:.o=.d)
+BPF_SKELS := $(BPF_OBJS:.bpf.o=.skel.h)
+PROGS := powertcp
+PROG_DEPS := $(PROGS:=.d)
+PROG_OBJS := $(PROGS:=.o)
 VMLINUX_H := vmlinux.h
 
 # Copied from Linux' tools/scripts/Makefile.arch:
@@ -19,29 +23,36 @@ ARCH := $(shell uname -m | sed -e s/i.86/x86/ -e s/x86_64/x86/ \
     -e s/sh[234].*/sh/ -e s/aarch64.*/arm64/ \
     -e s/riscv.*/riscv/)
 
-CFLAGS += -g -target bpf -D__TARGET_ARCH_$(ARCH) \
+BPF_CFLAGS := -g -target bpf -D__TARGET_ARCH_$(ARCH) \
 		  $(shell pkg-config --cflags libbpf) -c -O2 \
 		  -mcpu=probe -Wall -DHAVE_WRITABLE_SK_PACING=$(HAVE_WRITABLE_SK_PACING) \
 		  -I$(TCP_INT_DIR)/include
+CFLAGS := -O3 -Wall -Wextra $(shell pkg-config --cflags libbpf) -I$(TCP_INT_DIR)/src/tools
 DEP_CFLAGS := -M -MG -I$(TCP_INT_DIR)/include
+LDLIBS := $(shell pkg-config --libs libbpf)
 
 .PHONY: all
-all: $(BPF_OBJS)
+all: $(BPF_OBJS) $(PROGS)
 
 .PHONY: clean
 clean:
-	$(RM) $(BPF_DEPS) $(BPF_OBJS) $(VMLINUX_H)
+	$(RM) $(BPF_DEPS) $(BPF_OBJS) $(BPF_SKELS) $(PROG_DEPS) $(PROG_OBJS) $(PROGS) $(VMLINUX_H)
 
 $(VMLINUX_H): $(VMLINUX)
 	$(BPFTOOL) btf dump file $< format c > $@
 
 %.bpf.o: %.bpf.c
-	$(CLANG) $(CFLAGS) $< -o $@
+	$(CLANG) $(BPF_CFLAGS) $< -o $@
 	$(LLVM_STRIP) -g $@
 
-$(BPF_DEPS): %.d: %.c
+%.skel.h: %.bpf.o
+	$(BPFTOOL) gen skeleton $< > $@
+
+$(PROG_DEPS): DEP_CFLAGS += -I$(TCP_INT_DIR)/src/tools
+
+$(BPF_DEPS) $(PROG_DEPS): %.d: %.c
 	$(CC) $(DEP_CFLAGS) $< -MF $@
 
 ifneq ($(MAKECMDGOALS),clean)
--include $(BPF_DEPS)
+-include $(BPF_DEPS) $(PROG_DEPS)
 endif
