--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "bpf/tcp-int"]
 	path = bpf/tcp-int
-	url = https://github.com/p4lang/p4app-TCP-INT.git
+	url = https://github.com/jtdor/p4app-TCP-INT.git
