--- a/bpf/Makefile
+++ b/bpf/Makefile
@@ -27,7 +27,7 @@ BPF_CFLAGS := -g -target bpf -D__TARGET_ARCH_$(ARCH) \
 		  $(shell pkg-config --cflags libbpf) -c -O2 \
 		  -mcpu=v3 -Wall -DHAVE_WRITABLE_SK_PACING=$(HAVE_WRITABLE_SK_PACING) \
 		  -I.. -I$(TCP_INT_DIR)/include
-CFLAGS := -O3 -Wall -Wextra $(shell pkg-config --cflags libbpf) -I.. -I$(TCP_INT_DIR)/src/tools
+CXXFLAGS := -std=gnu++17 -O3 -Wall -Wextra $(shell pkg-config --cflags libbpf) -I.. -I$(TCP_INT_DIR)/src/tools
 DEP_CFLAGS := -M -MG -I.. -I$(TCP_INT_DIR)/include
 LDLIBS := $(shell pkg-config --libs libbpf)
 
@@ -48,10 +48,15 @@ $(VMLINUX_H): $(VMLINUX)
 %.skel.h: %.bpf.o
 	$(BPFTOOL) gen skeleton $< > $@
 
+$(PROGS): CC=$(CXX)
+
 $(PROG_DEPS): DEP_CFLAGS += -I$(TCP_INT_DIR)/src/tools
 
-$(BPF_DEPS) $(PROG_DEPS): %.d: %.c
+$(BPF_DEPS): %.d: %.c
 	$(CC) $(DEP_CFLAGS) $< -MF $@
+
+$(PROG_DEPS): %.d: %.cpp
+	$(CXX) $(DEP_CFLAGS) $< -MF $@
 
 ifneq ($(MAKECMDGOALS),clean)
 -include $(BPF_DEPS) $(PROG_DEPS)
